<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activities -->
    <string name="app_name">Rajawali Serializer</string>
    <string name="activity_title_serializer">Serializer</string>
    <string name="activity_title_settings">Serialier Settings</string>
    <!-- Menus -->
    <string name="menu_exit">Exit</string>
    <!-- <string name="menu_root">Root</string> -->
    <string name="menu_sdcard">SDCard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_up">Up</string>
    <!-- Dialogs -->
    <string name="close_dialog_title">Exit</string>
    <string name="close_dialog_message">Are you sure you want to exit?</string>
    <string name="serialize_dialog_title">Serialize Model</string>
    <string name="serialize_dialog_message">Are you sure you want to serialize this model?</string>
    <string name="error_read_access_title">Permission Denied</string>
    <string name="error_read_access_message">You do not have read access for this file.</string>
    <string name="error_not_parsable_title">Invalid Selection</string>
    <string name="error_not_parsable_message">The selected file is not parsable.</string>
    <!-- Preferences -->
    <string name="preference_cat_about">About</string>
    <string name="preference_cat_github">Github</string>
    <string name="preference_cat_rajawali">Rajawali</string>
    <string name="preference_about_more_apps_key">moreApps</string>
    <string name="preference_about_more_apps_title">More Apps</string>
    <string name="preference_about_more_apps_summary">Check more Toxic Bakery apps.</string>
    <string name="preference_about_rate_us_key">rateUs</string>
    <string name="preference_about_rate_us_title">Rate Us</string>
    <string name="preference_about_rate_us_summary">Take a second to tell us how we are doing.</string>
    <string name="preference_rajawali_learn_key">learnRajawali</string>
    <string name="preference_rajawali_learn_title">Powered by Rajawali</string>
    <string name="preference_rajawali_learn_summary">Create powerful 3D Android applications using Rajawali. Fork this project on Github.</string>
    <string name="preference_github_fork_key">forkProject</string>
    <string name="preference_github_fork_title">Rajawali Serializer</string>
    <string name="preference_github_fork_summary">Fork this project on Github.</string>
    <!-- Serializer -->
    <string name="serializer_parsing">Parsing File</string>
    <string name="serializer_parsing_failed">Parsing Failed</string>
    <string name="serializer_parsing_finished">Parsing Finished</string>
    <string name="serializer_button_start">Start Parsing</string>
    <!-- Misc -->
    <string name="empty"></string>
    <string name="file_image_desc">Visual representation of file type.</string>

</resources>